@@ -1,3 +1,6 @@
+2 October 2008: Wouter
+	- fixup unlink of pidfile.
+
 30 September 2008: Wouter
 	- fixup SHA256 DS downgrade, no longer possible to downgrade to SHA1.
 	- tests for sha256 support and downgrade resistance.
